--- a/css/ergyflash.css
+++ b/css/ergyflash.css
@@ -204,6 +204,10 @@ titreenv a:active {
         
 }
 
+.pictopoubelle {
+                                 width:90px; margin-top:10px;
+    
+}
 
 .envplein{
         
